Fixed text next to image on small screens (index)
Fixed text next to image on small screens (index)

through uncommenting width: 100%;

No negative effects to be recognized.

--- a/assets/css/compiled/style.css
+++ b/assets/css/compiled/style.css
@@ -942,38 +942,38 @@ a.top-border {
 /* line 2, ../pages/_home.scss */
 .important-info figure {
   max-width: 100%;
-  /*width:100%;*/
+  width: 100%;
   margin-bottom: 40px;
 }
 
-/* line 3, ../pages/_home.scss */
+/* line 6, ../pages/_home.scss */
 .important-info figure img {
   max-width: 100%;
 }
 
-/* line 4, ../pages/_home.scss */
+/* line 7, ../pages/_home.scss */
 .important-info figure figcaption {
   max-width: 100%;
 }
 
 @media only screen and (min-width: 444px) {
-  /* line 9, ../pages/_home.scss */
+  /* line 12, ../pages/_home.scss */
   .important-info {
     text-align: left;
   }
 
-  /* line 10, ../pages/_home.scss */
+  /* line 13, ../pages/_home.scss */
   .important-info h2 {
     margin-bottom: 40px;
   }
 
-  /* line 11, ../pages/_home.scss */
+  /* line 14, ../pages/_home.scss */
   .important-info p {
     text-align: center;
   }
 }
 @media only screen and (min-width: 600px) {
-  /* line 16, ../pages/_home.scss */
+  /* line 19, ../pages/_home.scss */
   .important-info figure {
     max-width: 40%;
     margin-bottom: 0;
